# integrotor

./: .gitignore  LICENSE  README.md  integrotor.cabal
src/Numeric/: Integrotor.hs
src/Numeric/Integrotor/: Simpson.hs
